fix: -errores de products solucionados
